Main page is stylezed

--- a/prepros.config
+++ b/prepros.config
@@ -102,8 +102,8 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1620224518979.8113,
-          "date": "2021-05-05T14:22:24.456Z"
+          "mtimeMs": 1620233397897.803,
+          "date": "2021-05-05T17:05:00.044Z"
         },
         {
           "file": "politics.pdf",
@@ -112,28 +112,28 @@
         },
         {
           "file": "404/index.html",
-          "mtimeMs": 1620223210601.285,
-          "date": "2021-05-05T14:22:24.851Z"
+          "mtimeMs": 1620225398656.9211,
+          "date": "2021-05-05T17:05:00.701Z"
         },
         {
           "file": "confirmed/index.html",
-          "mtimeMs": 1620223419037.8616,
-          "date": "2021-05-05T14:22:25.205Z"
+          "mtimeMs": 1620225399038.6829,
+          "date": "2021-05-05T17:05:01.754Z"
         },
         {
           "file": "css/confirmed.min.css",
-          "mtimeMs": 1618983215006.0254,
-          "date": "2021-04-21T05:51:55.431Z"
+          "mtimeMs": 1620234135340.548,
+          "date": "2021-05-05T17:05:02.458Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1620223145527.1985,
-          "date": "2021-05-05T14:22:25.610Z"
+          "mtimeMs": 1620233915943.858,
+          "date": "2021-05-05T17:05:03.184Z"
         },
         {
           "file": "css/thanks.min.css",
-          "mtimeMs": 1618983217898.2585,
-          "date": "2021-04-21T05:51:57.175Z"
+          "mtimeMs": 1620234189231.5403,
+          "date": "2021-05-05T17:05:04.513Z"
         },
         {
           "file": "fonts/Geometria.eot",
@@ -311,34 +311,14 @@
           "date": "2021-04-21T03:11:17.646Z"
         },
         {
-          "file": "img/backs/last.jpg",
-          "mtimeMs": 1618984264294.9282,
-          "date": "2021-04-21T05:51:58.003Z"
-        },
-        {
-          "file": "img/backs/main-conf.jpg",
-          "mtimeMs": 1618984267166.3228,
-          "date": "2021-04-21T05:51:58.575Z"
-        },
-        {
-          "file": "img/backs/main-thanks.jpg",
-          "mtimeMs": 1618984269681.0964,
-          "date": "2021-04-21T05:51:59.071Z"
-        },
-        {
-          "file": "img/backs/main.jpg",
-          "mtimeMs": 1618984271580.2317,
-          "date": "2021-04-21T05:51:59.669Z"
-        },
-        {
           "file": "img/icons/confirm.png",
-          "mtimeMs": 1618317919305.0315,
-          "date": "2021-04-21T03:11:20.124Z"
+          "mtimeMs": 1620230766494.9346,
+          "date": "2021-05-05T17:05:08.678Z"
         },
         {
           "file": "img/icons/phone.png",
-          "mtimeMs": 1618984277520.813,
-          "date": "2021-04-21T05:52:00.082Z"
+          "mtimeMs": 1620234254920.9028,
+          "date": "2021-05-05T17:05:09.506Z"
         },
         {
           "file": "img/icons/soc-links.png",
@@ -356,39 +336,14 @@
           "date": "2021-04-21T03:11:21.323Z"
         },
         {
-          "file": "img/images/about.jpg",
-          "mtimeMs": 1618984287703.3528,
-          "date": "2021-04-21T05:52:00.915Z"
-        },
-        {
           "file": "img/images/laptop.png",
           "mtimeMs": 1617818991198.4316,
           "date": "2021-04-21T03:11:22.011Z"
         },
         {
-          "file": "img/images/logo-about.png",
-          "mtimeMs": 1618984291475.2778,
-          "date": "2021-04-21T05:52:01.276Z"
-        },
-        {
           "file": "img/images/logo.png",
           "mtimeMs": 1618984294156.7307,
           "date": "2021-04-21T05:52:01.647Z"
-        },
-        {
-          "file": "img/images/results-1.png",
-          "mtimeMs": 1618982558165.6667,
-          "date": "2021-04-21T05:52:02.131Z"
-        },
-        {
-          "file": "img/images/results-2.jpg",
-          "mtimeMs": 1618935544289.0996,
-          "date": "2021-04-21T03:11:23.586Z"
-        },
-        {
-          "file": "img/images/yuriy.jpg",
-          "mtimeMs": 1618984305239.7446,
-          "date": "2021-04-21T05:52:02.595Z"
         },
         {
           "file": "js/libs.min.js",
@@ -407,13 +362,43 @@
         },
         {
           "file": "thanks/index.html",
-          "mtimeMs": 1620205251687.093,
-          "date": "2021-05-05T09:01:10.233Z"
+          "mtimeMs": 1620225398652.9226,
+          "date": "2021-05-05T17:05:16.718Z"
         },
         {
           "file": ".htaccess",
           "mtimeMs": 1618318966634.6047,
           "date": "2021-04-21T03:12:25.702Z"
+        },
+        {
+          "file": "img/backs/last.png",
+          "mtimeMs": 1620234243996.2769,
+          "date": "2021-05-05T17:05:05.550Z"
+        },
+        {
+          "file": "img/backs/main.png",
+          "mtimeMs": 1620234248211.074,
+          "date": "2021-05-05T17:05:07.945Z"
+        },
+        {
+          "file": "img/images/author-logo.png",
+          "mtimeMs": 1620234265889.6084,
+          "date": "2021-05-05T17:05:15.456Z"
+        },
+        {
+          "file": "img/images/yuriy.png",
+          "mtimeMs": 1620221804028.4478,
+          "date": "2021-05-05T14:24:04.526Z"
+        },
+        {
+          "file": "img/backs/main-conf.png",
+          "mtimeMs": 1620234227609.7703,
+          "date": "2021-05-05T17:05:07.015Z"
+        },
+        {
+          "file": "img/icons/why.png",
+          "mtimeMs": 1620234258990.504,
+          "date": "2021-05-05T17:05:14.034Z"
         }
       ]
     },
@@ -433,7 +418,8 @@
         "grid": "autoplace",
         "browsers": [
           "> 2%",
-          "not dead"
+          "not dead",
+          "last 100 versions"
         ],
         "sourceMap": false
       },
@@ -703,7 +689,8 @@
         "stage": 2,
         "browsers": [
           "> 2%",
-          "not dead"
+          "not dead",
+          "last 100 versions"
         ],
         "sourceMap": false
       },
@@ -1335,9 +1322,23 @@
         }
       },
       {
+        "file": "img/backs/last.png",
+        "config": {
+          "originalSize": 1136059,
+          "optimized": true
+        }
+      },
+      {
         "file": "img/backs/main-conf.jpg",
         "config": {
           "originalSize": 610382,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/backs/main-conf.png",
+        "config": {
+          "originalSize": 1397185,
           "optimized": true
         }
       },
@@ -1356,6 +1357,13 @@
         }
       },
       {
+        "file": "img/backs/main.png",
+        "config": {
+          "originalSize": 1377279,
+          "optimized": true
+        }
+      },
+      {
         "file": "img/icons/phone.png",
         "config": {
           "originalSize": 828,
@@ -1370,6 +1378,13 @@
         }
       },
       {
+        "file": "img/icons/why.png",
+        "config": {
+          "originalSize": 34000,
+          "optimized": true
+        }
+      },
+      {
         "file": "img/images/about.jpg",
         "config": {
           "originalSize": 91577,
@@ -1377,10 +1392,17 @@
         }
       },
       {
+        "file": "img/images/author-logo.png",
+        "config": {
+          "originalSize": 46229,
+          "optimized": true
+        }
+      },
+      {
         "file": "img/images/logo-about.png",
         "config": {
-          "originalSize": 24603,
-          "optimized": true
+          "optimized": true,
+          "originalSize": 6062
         }
       },
       {
@@ -1401,6 +1423,12 @@
         "config": {
           "originalSize": 72389,
           "optimized": true
+        }
+      },
+      {
+        "file": "img/images/yuriy.png",
+        "config": {
+          "originalSize": 949122
         }
       }
     ]
