--- a/prepros.config
+++ b/prepros.config
@@ -102,8 +102,8 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1620289908270.0427,
-          "date": "2021-05-06T08:31:52.429Z"
+          "mtimeMs": 1622529640522.047,
+          "date": "2021-06-01T08:31:05.477Z"
         },
         {
           "file": "politics.pdf",
@@ -112,13 +112,13 @@
         },
         {
           "file": "404/index.html",
-          "mtimeMs": 1620234447898.7705,
-          "date": "2021-05-05T17:12:24.830Z"
+          "mtimeMs": 1622529511947.4521,
+          "date": "2021-06-01T08:31:06.149Z"
         },
         {
           "file": "confirmed/index.html",
-          "mtimeMs": 1620289839131.9348,
-          "date": "2021-05-06T08:31:52.743Z"
+          "mtimeMs": 1622529511947.4521,
+          "date": "2021-06-01T08:31:06.445Z"
         },
         {
           "file": "css/confirmed.min.css",
@@ -127,8 +127,8 @@
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1620287813147.907,
-          "date": "2021-05-06T07:56:58.988Z"
+          "mtimeMs": 1622289079195.8328,
+          "date": "2021-05-29T11:53:08.898Z"
         },
         {
           "file": "css/thanks.min.css",
@@ -362,13 +362,13 @@
         },
         {
           "file": "thanks/index.html",
-          "mtimeMs": 1620289845395.4636,
-          "date": "2021-05-06T08:31:53.029Z"
+          "mtimeMs": 1622529512490.0942,
+          "date": "2021-06-01T08:31:07.169Z"
         },
         {
           "file": ".htaccess",
-          "mtimeMs": 1618318966634.6047,
-          "date": "2021-05-05T17:12:20.651Z"
+          "mtimeMs": 1622289146124.3767,
+          "date": "2021-05-29T11:53:08.275Z"
         },
         {
           "file": "img/backs/last.png",
@@ -399,6 +399,16 @@
           "file": "img/icons/why.png",
           "mtimeMs": 1620234258990.504,
           "date": "2021-05-05T17:13:05.918Z"
+        },
+        {
+          "file": "2/index.html",
+          "mtimeMs": 1622536207464.2385,
+          "date": "2021-06-01T08:31:05.861Z"
+        },
+        {
+          "file": "css/styles-2.min.css",
+          "mtimeMs": 1622536059931.0962,
+          "date": "2021-06-01T08:31:06.835Z"
         }
       ]
     },
@@ -1242,9 +1252,22 @@
     },
     "files": [
       {
+        "file": "_app/2.pug",
+        "config": {
+          "customOutput": "2\\index.html"
+        }
+      },
+      {
         "file": "_app/404.pug",
         "config": {
           "customOutput": "404\\index.html"
+        }
+      },
+      {
+        "file": "_app/_js/libs-2.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js\\libs-2.min.js"
         }
       },
       {
@@ -1252,6 +1275,13 @@
         "config": {
           "autoCompile": true,
           "customOutput": "js\\libs.min.js"
+        }
+      },
+      {
+        "file": "_app/_js/scripts-2.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js\\scripts-2.js"
         }
       },
       {
@@ -1294,6 +1324,12 @@
         "file": "_app/styl/conf.min.styl",
         "config": {
           "customOutput": "css\\confirmed.min.css"
+        }
+      },
+      {
+        "file": "_app/styl/styles-2.min.styl",
+        "config": {
+          "customOutput": "css\\styles-2.min.css"
         }
       },
       {
