Page 2 is adapted

--- a/prepros.config
+++ b/prepros.config
@@ -102,8 +102,8 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1622529640522.047,
-          "date": "2021-06-01T08:31:05.477Z"
+          "mtimeMs": 1622557445972.9395,
+          "date": "2021-06-01T14:25:06.957Z"
         },
         {
           "file": "politics.pdf",
@@ -127,8 +127,8 @@
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1622289079195.8328,
-          "date": "2021-05-29T11:53:08.898Z"
+          "mtimeMs": 1622541242521.4128,
+          "date": "2021-06-01T09:54:29.393Z"
         },
         {
           "file": "css/thanks.min.css",
@@ -367,8 +367,8 @@
         },
         {
           "file": ".htaccess",
-          "mtimeMs": 1622289146124.3767,
-          "date": "2021-05-29T11:53:08.275Z"
+          "mtimeMs": 1622611757190.3367,
+          "date": "2021-06-02T05:29:21.810Z"
         },
         {
           "file": "img/backs/last.png",
@@ -402,13 +402,23 @@
         },
         {
           "file": "2/index.html",
-          "mtimeMs": 1622536207464.2385,
-          "date": "2021-06-01T08:31:05.861Z"
+          "mtimeMs": 1622617658178.346,
+          "date": "2021-06-02T07:08:59.820Z"
         },
         {
           "file": "css/styles-2.min.css",
-          "mtimeMs": 1622536059931.0962,
-          "date": "2021-06-01T08:31:06.835Z"
+          "mtimeMs": 1622617723879.8718,
+          "date": "2021-06-02T07:09:00.127Z"
+        },
+        {
+          "file": "img/images/info-1.jpg",
+          "mtimeMs": 1622611655679.192,
+          "date": "2021-06-02T05:27:42.741Z"
+        },
+        {
+          "file": "img/images/info-2.jpg",
+          "mtimeMs": 1622614449038.038,
+          "date": "2021-06-02T06:15:08.295Z"
         }
       ]
     },
@@ -1432,6 +1442,20 @@
         "config": {
           "originalSize": 46229,
           "optimized": true
+        }
+      },
+      {
+        "file": "img/images/info-1.jpg",
+        "config": {
+          "originalSize": 176758,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/images/info-2.jpg",
+        "config": {
+          "optimized": true,
+          "originalSize": 168532
         }
       },
       {
