--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,17 @@
+# Включение gzip сжатия русским трактористом text, html, javascript, css, xml
+
+AddOutputFilterByType DEFLATE application/xml
+AddOutputFilterByType DEFLATE application/xhtml+xml
+AddOutputFilterByType DEFLATE application/rss+xml
+AddOutputFilterByType DEFLATE application/javascript
+AddOutputFilterByType DEFLATE application/x-javascript
+
+AddOutputFilterByType DEFLATE text/plain
+AddOutputFilterByType DEFLATE text/html
+AddOutputFilterByType DEFLATE text/xml
+AddOutputFilterByType DEFLATE text/css
+SetOutputFilter DEFLATE
+
 # Заголовок Cache-Control
 <IfModule mod_headers.c>
         Header append Cache-Control "no-store, no-cache, must-revalidate"
