Thanks 2 page is done

--- a/prepros.config
+++ b/prepros.config
@@ -362,8 +362,8 @@
         },
         {
           "file": "thanks/index.html",
-          "mtimeMs": 1622717389706.6255,
-          "date": "2021-06-03T10:49:55.266Z"
+          "mtimeMs": 1623054197583.1304,
+          "date": "2021-06-07T08:23:27.208Z"
         },
         {
           "file": ".htaccess",
@@ -419,6 +419,11 @@
           "file": "img/images/info-2.jpg",
           "mtimeMs": 1622614449038.038,
           "date": "2021-06-02T06:15:08.295Z"
+        },
+        {
+          "file": "thanks-2/index.html",
+          "mtimeMs": 1623054192581.2737,
+          "date": "2021-06-07T08:23:27.506Z"
         }
       ]
     },
@@ -1352,6 +1357,12 @@
         "file": "_app/styl/thanks.min.styl",
         "config": {
           "customOutput": "css\\thanks.min.css"
+        }
+      },
+      {
+        "file": "_app/thanks-2.pug",
+        "config": {
+          "customOutput": "thanks-2\\index.html"
         }
       },
       {
