Autoweb pages are added

--- a/prepros.config
+++ b/prepros.config
@@ -3,9 +3,9 @@
   "about": "This is a Prepros (https://prepros.io) configuration file. You can commit this file to a git repo to backup and sync project configurations.",
   "config": {
     "proxy": {
-      "enable": false,
-      "target": "",
-      "useLocalAssets": false
+      "enable": true,
+      "target": "http://sochi",
+      "useLocalAssets": true
     },
     "reload": {
       "enable": true,
@@ -102,8 +102,8 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1622965689790.6194,
-          "date": "2021-06-06T07:48:15.917Z"
+          "mtimeMs": 1623295797698.807,
+          "date": "2021-06-10T03:30:36.753Z"
         },
         {
           "file": "politics.pdf",
@@ -367,8 +367,8 @@
         },
         {
           "file": ".htaccess",
-          "mtimeMs": 1622611757190.3367,
-          "date": "2021-06-02T05:29:21.810Z"
+          "mtimeMs": 1623145896527.4072,
+          "date": "2021-06-08T09:56:26.113Z"
         },
         {
           "file": "img/backs/last.png",
@@ -424,6 +424,26 @@
           "file": "thanks-2/index.html",
           "mtimeMs": 1623054192581.2737,
           "date": "2021-06-07T08:23:27.506Z"
+        },
+        {
+          "file": "confirmed-webinar/index.html",
+          "mtimeMs": 1623145296980.484,
+          "date": "2021-06-08T09:56:26.454Z"
+        },
+        {
+          "file": "date/date.php",
+          "mtimeMs": 1623146167513.9402,
+          "date": "2021-06-08T09:56:26.774Z"
+        },
+        {
+          "file": "thanks-webinar/index.html",
+          "mtimeMs": 1623145401851.736,
+          "date": "2021-06-08T09:56:27.031Z"
+        },
+        {
+          "file": "webinar/index.php",
+          "mtimeMs": 1623312119939.8562,
+          "date": "2021-06-10T08:02:03.942Z"
         }
       ]
     },
@@ -1324,6 +1344,18 @@
         }
       },
       {
+        "file": "_app/autoweb.pug",
+        "config": {
+          "customOutput": "webinar\\index.php"
+        }
+      },
+      {
+        "file": "_app/confirmed-webinar.pug",
+        "config": {
+          "customOutput": "confirmed-webinar\\index.html"
+        }
+      },
+      {
         "file": "_app/confirmed.pug",
         "config": {
           "customOutput": "confirmed\\index.html"
@@ -1363,6 +1395,12 @@
         "file": "_app/thanks-2.pug",
         "config": {
           "customOutput": "thanks-2\\index.html"
+        }
+      },
+      {
+        "file": "_app/thanks-webinar.pug",
+        "config": {
+          "customOutput": "thanks-webinar\\index.html"
         }
       },
       {
