--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,16 @@
 # Включение gzip сжатия русским трактористом text, html, javascript, css, xml
 
-AddOutputFilterByType DEFLATE application/xml
-AddOutputFilterByType DEFLATE application/xhtml+xml
-AddOutputFilterByType DEFLATE application/rss+xml
-AddOutputFilterByType DEFLATE application/javascript
-AddOutputFilterByType DEFLATE application/x-javascript
-
-AddOutputFilterByType DEFLATE text/plain
-AddOutputFilterByType DEFLATE text/html
-AddOutputFilterByType DEFLATE text/xml
-AddOutputFilterByType DEFLATE text/css
-SetOutputFilter DEFLATE
+# AddOutputFilterByType DEFLATE application/xml
+# AddOutputFilterByType DEFLATE application/xhtml+xml
+# AddOutputFilterByType DEFLATE application/rss+xml
+# AddOutputFilterByType DEFLATE application/javascript
+# AddOutputFilterByType DEFLATE application/x-javascript
+# 
+# AddOutputFilterByType DEFLATE text/plain
+# AddOutputFilterByType DEFLATE text/html
+# AddOutputFilterByType DEFLATE text/xml
+# AddOutputFilterByType DEFLATE text/css
+# SetOutputFilter DEFLATE
 
 # Заголовок Cache-Control
 <IfModule mod_headers.c>
